Another way of doing the same exercise

--- a/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -125,7 +125,10 @@
    "source": [
     "## Calculate the output of this network using the weights and bias tensors\n",
     "\n",
-    "output = activation(torch.sum(features * weights) + bias)"
+    "output = activation(torch.sum(features * weights) + bias)\n",
+    "print(output)\n",
+    "output = activation((features * weights).sum() + bias)\n",
+    "prin"
    ]
   },
   {
