--- a/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1595]])\n",
+      "tensor([[0.1595]])\n"
+     ]
+    }
+   ],
    "source": [
     "## Calculate the output of this network using the weights and bias tensors\n",
     "\n",
     "output = activation(torch.sum(features * weights) + bias)\n",
     "print(output)\n",
     "output = activation((features * weights).sum() + bias)\n",
-    "prin"
+    "print(output)"
    ]
   },
   {
@@ -167,11 +176,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1595]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "\n",
+    "# Reshape weights\n",
+    "weights = weights.view(5, 1)\n",
+    "\n",
+    "# Matrix multiplication\n",
+    "output = activation(torch.mm(features, weights) + bias)\n",
+    "\n",
+    "print(output)"
    ]
   },
   {
