Calculate the output for multi-layer network

--- a/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -207,7 +207,7 @@
     "\n",
     "That's how you can calculate the output for a single neuron. The real power of this algorithm happens when you start stacking these individual units into layers and stacks of layers, into a network of neurons. The output of one layer of neurons becomes the input for the next layer. With multiple input units and output units, we now need to express the weights as a matrix.\n",
     "\n",
-    "<img src='assets/multilayer_diagram_weights.png' width=450px>\n",
+    "<img src='../assets/multilayer_diagram_weights.png' width=450px>\n",
     "\n",
     "The first layer shown on the bottom here are the inputs, understandably called the **input layer**. The middle layer is called the **hidden layer**, and the final layer (on the right) is the **output layer**. We can express this network mathematically with matrices again and use matrix multiplication to get linear combinations for each unit in one operation. For example, the hidden layer ($h_1$ and $h_2$ here) can be calculated \n",
     "\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "\n",
+    "h = activation(torch.mm(features, W1) + B1)\n",
+    "output = activation(torch.mm(h, W2) + B2)\n",
+    "print(output)"
    ]
   },
   {
