--- a/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -307,9 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.69749148, 0.16070551, 0.32268846],\n",
+       "       [0.41534997, 0.23321193, 0.27131737],\n",
+       "       [0.52593605, 0.03744107, 0.14734479],\n",
+       "       [0.74160413, 0.50791071, 0.41002112]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.random.rand(4,3)\n",
@@ -318,9 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6975, 0.1607, 0.3227],\n",
+       "        [0.4153, 0.2332, 0.2713],\n",
+       "        [0.5259, 0.0374, 0.1473],\n",
+       "        [0.7416, 0.5079, 0.4100]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
     "b"
@@ -328,9 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.69749148, 0.16070551, 0.32268846],\n",
+       "       [0.41534997, 0.23321193, 0.27131737],\n",
+       "       [0.52593605, 0.03744107, 0.14734479],\n",
+       "       [0.74160413, 0.50791071, 0.41002112]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -344,9 +386,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.3950, 0.3214, 0.6454],\n",
+       "        [0.8307, 0.4664, 0.5426],\n",
+       "        [1.0519, 0.0749, 0.2947],\n",
+       "        [1.4832, 1.0158, 0.8200]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -354,13 +410,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.39498297, 0.32141103, 0.64537692],\n",
+       "       [0.83069995, 0.46642387, 0.54263474],\n",
+       "       [1.0518721 , 0.07488214, 0.29468958],\n",
+       "       [1.48320827, 1.01582142, 0.82004225]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
