--- a/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([64, 784])"
+       "torch.Size([64, 10])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,10 +304,12 @@
     "B1 = torch.randn((1, 256))\n",
     "B2 = torch.randn(1, 10)\n",
     "\n",
-    "h = torch.sigmoid(torch.mm(features, weights) + B1)\n",
+    "h = torch.sigmoid(torch.mm(features, W1) + B1)\n",
     "\n",
     "# output of your network, should have shape (64,10)\n",
-    "out = torch.sigmoid(torch.m)"
+    "out = torch.sigmoid(torch.mm(h, W2) + B2)\n",
+    "\n",
+    "out.shape"
    ]
   },
   {
