Making corrections to improve the solution

--- a/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "torch.Size([64, 10])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,20 +294,24 @@
    "source": [
     "## Your solution\n",
     "\n",
+    "# Activation function\n",
+    "def activation(x):\n",
+    "    return 1 / (1 + torch.exp(-x))\n",
     "\n",
-    "# batch_size = 64\n",
-    "features = images.view(64, 28*28)\n",
+    "# Flattening\n",
+    "features = images.view(images.shape[0], -1)\n",
     "\n",
+    "# Hyperparameters\n",
     "W1 = torch.randn(784, 256)\n",
+    "B1 = torch.randn(256)\n",
+    "\n",
     "W2 = torch.randn(256, 10)\n",
+    "B2 = torch.randn(10)\n",
     "\n",
-    "B1 = torch.randn((1, 256))\n",
-    "B2 = torch.randn(1, 10)\n",
-    "\n",
-    "h = torch.sigmoid(torch.mm(features, W1) + B1)\n",
+    "h = activation(torch.mm(features, W1) + B1)\n",
     "\n",
     "# output of your network, should have shape (64,10)\n",
-    "out = torch.sigmoid(torch.mm(h, W2) + B2)\n",
+    "out = torch.mm(h, W2) + B2\n",
     "\n",
     "out.shape"
    ]
