Adding assets and implementing exercise of creation of a neural network

--- a/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
@@ -382,10 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from torch import nn"
@@ -393,10 +391,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Network(nn.Module):\n",
@@ -473,11 +469,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Network(\n",
+       "  (hidden): Linear(in_features=784, out_features=256, bias=True)\n",
+       "  (output): Linear(in_features=256, out_features=10, bias=True)\n",
+       "  (sigmoid): Sigmoid()\n",
+       "  (softmax): Softmax(dim=1)\n",
+       ")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the network and look at it's text representation\n",
     "model = Network()\n",
@@ -493,10 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
@@ -526,7 +534,7 @@
     "\n",
     "So far we've only been looking at the sigmoid activation function, but in general any function can be used as an activation function. The only requirement is that for a network to approximate a non-linear function, the activation functions must be non-linear. Here are a few more examples of common activation functions: Tanh (hyperbolic tangent), and ReLU (rectified linear unit).\n",
     "\n",
-    "<img src=\"assets/activation.png\" width=700px>\n",
+    "<img src=\"../assets/activation.png\" width=700px>\n",
     "\n",
     "In practice, the ReLU function is used almost exclusively as the activation function for hidden layers."
    ]
@@ -537,7 +545,7 @@
    "source": [
     "### Your Turn to Build a Network\n",
     "\n",
-    "<img src=\"assets/mlp_mnist.png\" width=600px>\n",
+    "<img src=\"../assets/mlp_mnist.png\" width=600px>\n",
     "\n",
     "> **Exercise:** Create a network with 784 input units, a hidden layer with 128 units and a ReLU activation, then a hidden layer with 64 units and a ReLU activation, and finally an output layer with a softmax activation as shown above. You can use a ReLU activation with the `nn.ReLU` module or `F.relu` function.\n",
     "\n",
@@ -546,14 +554,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "## Your solution here\n"
+    "## Your solution here\n",
+    "\n",
+    "class model(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        fc1 = nn.Linear(784, 128)\n",
+    "        fc2 = nn.Linear(128, 64)\n",
+    "        fc3 = nn.Linear(64, 10)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = F.softmax(self.fc3(x), dim=1)\n",
+    "        \n",
+    "        return x"
    ]
   },
   {
