--- a/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
+++ b/lesson2_Deep-Learning-with-PyTorch/Part 2 - Neural Networks in PyTorch (Exercises).ipynb
@@ -757,11 +757,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (fc1): Linear(in_features=784, out_features=128, bias=True)\n",
+       "  (relu1): ReLU()\n",
+       "  (fc2): Linear(in_features=128, out_features=64, bias=True)\n",
+       "  (relu2): ReLU()\n",
+       "  (output): Linear(in_features=64, out_features=10, bias=True)\n",
+       "  (softmax): Softmax(dim=1)\n",
+       ")"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import OrderedDict\n",
     "model = nn.Sequential(OrderedDict([\n",
@@ -783,11 +799,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear(in_features=784, out_features=128, bias=True)\n",
+      "Linear(in_features=784, out_features=128, bias=True)\n"
+     ]
+    }
+   ],
    "source": [
     "print(model[0])\n",
     "print(model.fc1)"
